--- a/.github/workflows/k6-auto-tests.yml
+++ b/.github/workflows/k6-auto-tests.yml
@@ -4,20 +4,24 @@ on:
   pull_request:
     branches: [ main ]
     paths: [ 'API01/**/*.js' ]
-
-  workflow_dispatch: 
+  
+  workflow_dispatch:
     inputs:
       environment:
         description: 'Ambiente'
-        default: 'CERT'
+        default: 'DEV'  
         type: choice
-        options: [CERT, DEV]
+        options: [DEV, CERT] 
 
 jobs:
-  validate_pr:
+  cloud_performance_test:
+    name: 🚀 Run K6 in Grafana Cloud
     runs-on: ubuntu-latest
     env:
-      # URLs
+      K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
+
+      TARGET_ENV: ${{ github.event.inputs.environment || 'DEV' }} 
+      
       URL_CERT: "https://api01-siasis-cert.vercel.app"
       URL_CERT_INS2: "https://api01-siasis-cert-ins2.vercel.app"
       URL_CERT_INS3: "https://api01-siasis-cert-ins3.vercel.app"
@@ -26,11 +30,7 @@ jobs:
       URL_PROD: "https://ie20935-api01-ins1.vercel.app"
       URL_PROD_INS2: "https://ie20935-api01-ins2.vercel.app"
       URL_PROD_INS3: "https://ie20935-api01-ins3.vercel.app"
-      
-      # En PRs, siempre prueba en CERT (recomendado)
-      TARGET_ENV: ${{ github.event.inputs.environment || 'CERT' }}
 
-      # Credenciales desde GitHub Secrets
       NOMBRE_USUARIO_DIRECTIVO: ${{ secrets.NOMBRE_USUARIO_DIRECTIVO }}
       CONTRASENA_DIRECTIVO: ${{ secrets.CONTRASENA_DIRECTIVO }}
       NOMBRE_USUARIO_AUXILIAR: ${{ secrets.NOMBRE_USUARIO_AUXILIAR }}
@@ -45,6 +45,7 @@ jobs:
       CONTRASENA_TUTOR: ${{ secrets.CONTRASENA_TUTOR }}
       DNI_ADMIN: ${{ secrets.DNI_ADMIN }}
       DNI_AUXILIAR: ${{ secrets.DNI_AUXILIAR }} 
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -60,50 +61,20 @@ jobs:
       - name: Setup k6
         uses: grafana/setup-k6-action@v1
 
-      - name: Run K6 Check
+      - name: Run Tests in Cloud
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          echo "📋 Archivos modificados detectados"
-          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-          
-          test_failed=0
+          echo "☁️ Iniciando ejecución en Grafana Cloud (Ambiente: $TARGET_ENV)..."
           
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            # Filtramos utilidades y helpers
             if [[ "$file" != *"urlManager.js"* ]] && [[ "$file" == API01/* ]]; then
-              echo ""
-              echo "🛡️ Validando: $file"
               
-              # Ejecutar test con thresholds override
-              # Si el archivo tiene thresholds propios, usa esos
-              # Si no, aplica thresholds básicos de validación
-              if k6 run \
-                --summary-export=summary-${file//\//-}.json \
-                --out json=results-${file//\//-}.json \
-                "$file"; then
-                echo "✅ Test pasó validación"
-              else
-                echo "❌ Test FALLÓ - PR bloqueado"
-                test_failed=1
-              fi
               echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+              echo "🚀 Enviando a la nube: $file"
+              
+              # Ejecutar en la nube
+              k6 cloud "$file"
+              
             fi
           done
-          
-          if [ $test_failed -eq 1 ]; then
-            echo ""
-            echo "❌ Uno o más tests fallaron. El PR no puede ser mergeado."
-            exit 1
-          fi
-          
-          echo ""
-          echo "✅ Todos los tests pasaron. PR listo para revisión."
-      
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: k6-validation-results
-          path: |
-            summary-*.json
-            results-*.json
-          retention-days: 30
