--- a/.github/workflows/k6-auto-tests.yml
+++ b/.github/workflows/k6-auto-tests.yml
@@ -17,88 +17,71 @@ jobs:
   cloud_performance_test:
     name: 🚀 Run K6 in Grafana Cloud
     runs-on: ubuntu-latest
-    env:
-      K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
-
-      TARGET_ENV: ${{ github.event.inputs.environment || 'DEV' }} 
-      
-      URL_CERT: "https://api01-siasis-cert.vercel.app"
-      URL_CERT_INS2: "https://api01-siasis-cert-ins2.vercel.app"
-      URL_CERT_INS3: "https://api01-siasis-cert-ins3.vercel.app"
-      URL_DEV: "https://api01-siasis-dev.vercel.app"
-      URL_DEV_INS2: "https://api01-siasis-dev-ins2.vercel.app"
-      URL_PROD: "https://ie20935-api01-ins1.vercel.app"
-      URL_PROD_INS2: "https://ie20935-api01-ins2.vercel.app"
-      URL_PROD_INS3: "https://ie20935-api01-ins3.vercel.app"
-
-      NOMBRE_USUARIO_DIRECTIVO: ${{ secrets.NOMBRE_USUARIO_DIRECTIVO }}
-      CONTRASENA_DIRECTIVO: ${{ secrets.CONTRASENA_DIRECTIVO }}
-      NOMBRE_USUARIO_AUXILIAR: ${{ secrets.NOMBRE_USUARIO_AUXILIAR }}
-      CONTRASENA_AUXILIAR: ${{ secrets.CONTRASENA_AUXILIAR }}
-      NOMBRE_USUARIO_NO_TUTOR: ${{ secrets.NOMBRE_USUARIO_NO_TUTOR }}
-      CONTRASENA_NO_TUTOR: ${{ secrets.CONTRASENA_NO_TUTOR }}
-      NOMBRE_USUARIO_PERSONAL_ADMIN: ${{ secrets.NOMBRE_USUARIO_PERSONAL_ADMIN }}
-      CONTRASENA_PERSONAL_ADMIN: ${{ secrets.CONTRASENA_PERSONAL_ADMIN }}
-      NOMBRE_USUARIO_PROFESOR_PRIMARIA: ${{ secrets.NOMBRE_USUARIO_PROFESOR_PRIMARIA }}
-      CONTRASENA_PROFESOR_PRIMARIA: ${{ secrets.CONTRASENA_PROFESOR_PRIMARIA }}
-      NOMBRE_USUARIO_TUTOR: ${{ secrets.NOMBRE_USUARIO_TUTOR }}
-      CONTRASENA_TUTOR: ${{ secrets.CONTRASENA_TUTOR }}
-      DNI_ADMIN: ${{ secrets.DNI_ADMIN }}
-      DNI_AUXILIAR: ${{ secrets.DNI_AUXILIAR }} 
+    # Eliminamos el bloque 'env' gigante de aquí para limpiar visualmente.
+    # Las secrets se acceden directo en el 'run'.
 
     steps:
-          - name: Checkout code
-            uses: actions/checkout@v4
-            with:
-              fetch-depth: 2
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
-          - name: Detect changed files
-            id: changed-files
-            uses: tj-actions/changed-files@v41
-            with:
-              files: 'API01/**/*.js'
+      - name: Detect changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v41
+        with:
+          files: 'API01/**/*.js'
 
-          - name: Setup k6
-            uses: grafana/setup-k6-action@v1
+      - name: Setup k6
+        uses: grafana/setup-k6-action@v1
 
-          - name: Run Tests in Cloud
-            if: steps.changed-files.outputs.any_changed == 'true'
-            run: |
-              echo "☁️ Iniciando ejecución en Grafana Cloud (Ambiente: $TARGET_ENV)..."
+      - name: Run Tests in Cloud
+        if: steps.changed-files.outputs.any_changed == 'true'
+        env:
+          K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
+          TARGET_ENV: ${{ github.event.inputs.environment || 'DEV' }} 
+        run: |
+          echo "☁️ Iniciando ejecución en Grafana Cloud (Ambiente: $TARGET_ENV)..."
+          
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            
+            # MEJORA: Lógica más robusta. 
+            # Ignoramos cualquier archivo dentro de una carpeta que se llame 'Utils', 'utils', 'Auxiliar', etc.
+            # O simplemente validamos que NO sea el urlManager explícitamente si no quieres renombrar archivos.
+            
+            if [[ "$file" == *"urlManager.js"* ]]; then
+               echo "⏩ Saltando utilidad: $file"
+               continue
+            fi
+            
+            if [[ "$file" == API01/* ]]; then
+              echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+              echo "🚀 Enviando a la nube: $file"
               
-              for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-                # Filtramos utilidades y helpers
-                if [[ "$file" != *"urlManager.js"* ]] && [[ "$file" == API01/* ]]; then
-                  
-                  echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-                  echo "🚀 Enviando a la nube: $file"
-                  
-                  # --- AQUÍ ESTÁ EL CAMBIO IMPORTANTE ---
-                  # Pasamos cada variable con -e para que llegue a la nube
-                  k6 cloud "$file" \
-                    -e TARGET_ENV="$TARGET_ENV" \
-                    -e URL_CERT="$URL_CERT" \
-                    -e URL_CERT_INS2="$URL_CERT_INS2" \
-                    -e URL_CERT_INS3="$URL_CERT_INS3" \
-                    -e URL_DEV="$URL_DEV" \
-                    -e URL_DEV_INS2="$URL_DEV_INS2" \
-                    -e URL_PROD="$URL_PROD" \
-                    -e URL_PROD_INS2="$URL_PROD_INS2" \
-                    -e URL_PROD_INS3="$URL_PROD_INS3" \
-                    -e NOMBRE_USUARIO_DIRECTIVO="$NOMBRE_USUARIO_DIRECTIVO" \
-                    -e CONTRASENA_DIRECTIVO="$CONTRASENA_DIRECTIVO" \
-                    -e NOMBRE_USUARIO_AUXILIAR="$NOMBRE_USUARIO_AUXILIAR" \
-                    -e CONTRASENA_AUXILIAR="$CONTRASENA_AUXILIAR" \
-                    -e NOMBRE_USUARIO_NO_TUTOR="$NOMBRE_USUARIO_NO_TUTOR" \
-                    -e CONTRASENA_NO_TUTOR="$CONTRASENA_NO_TUTOR" \
-                    -e NOMBRE_USUARIO_PERSONAL_ADMIN="$NOMBRE_USUARIO_PERSONAL_ADMIN" \
-                    -e CONTRASENA_PERSONAL_ADMIN="$CONTRASENA_PERSONAL_ADMIN" \
-                    -e NOMBRE_USUARIO_PROFESOR_PRIMARIA="$NOMBRE_USUARIO_PROFESOR_PRIMARIA" \
-                    -e CONTRASENA_PROFESOR_PRIMARIA="$CONTRASENA_PROFESOR_PRIMARIA" \
-                    -e NOMBRE_USUARIO_TUTOR="$NOMBRE_USUARIO_TUTOR" \
-                    -e CONTRASENA_TUTOR="$CONTRASENA_TUTOR" \
-                    -e DNI_ADMIN="$DNI_ADMIN" \
-                    -e DNI_AUXILIAR="$DNI_AUXILIAR"
-                  
-                fi
-              done
+              # Ejecución directa pasando secretos
+              k6 cloud "$file" \
+                -e TARGET_ENV="$TARGET_ENV" \
+                -e URL_CERT="https://api01-siasis-cert.vercel.app" \
+                -e URL_CERT_INS2="https://api01-siasis-cert-ins2.vercel.app" \
+                -e URL_CERT_INS3="https://api01-siasis-cert-ins3.vercel.app" \
+                -e URL_DEV="https://api01-siasis-dev.vercel.app" \
+                -e URL_DEV_INS2="https://api01-siasis-dev-ins2.vercel.app" \
+                -e URL_PROD="https://ie20935-api01-ins1.vercel.app" \
+                -e URL_PROD_INS2="https://ie20935-api01-ins2.vercel.app" \
+                -e URL_PROD_INS3="https://ie20935-api01-ins3.vercel.app" \
+                -e NOMBRE_USUARIO_DIRECTIVO="${{ secrets.NOMBRE_USUARIO_DIRECTIVO }}" \
+                -e CONTRASENA_DIRECTIVO="${{ secrets.CONTRASENA_DIRECTIVO }}" \
+                -e NOMBRE_USUARIO_AUXILIAR="${{ secrets.NOMBRE_USUARIO_AUXILIAR }}" \
+                -e CONTRASENA_AUXILIAR="${{ secrets.CONTRASENA_AUXILIAR }}" \
+                -e NOMBRE_USUARIO_NO_TUTOR="${{ secrets.NOMBRE_USUARIO_NO_TUTOR }}" \
+                -e CONTRASENA_NO_TUTOR="${{ secrets.CONTRASENA_NO_TUTOR }}" \
+                -e NOMBRE_USUARIO_PERSONAL_ADMIN="${{ secrets.NOMBRE_USUARIO_PERSONAL_ADMIN }}" \
+                -e CONTRASENA_PERSONAL_ADMIN="${{ secrets.CONTRASENA_PERSONAL_ADMIN }}" \
+                -e NOMBRE_USUARIO_PROFESOR_PRIMARIA="${{ secrets.NOMBRE_USUARIO_PROFESOR_PRIMARIA }}" \
+                -e CONTRASENA_PROFESOR_PRIMARIA="${{ secrets.CONTRASENA_PROFESOR_PRIMARIA }}" \
+                -e NOMBRE_USUARIO_TUTOR="${{ secrets.NOMBRE_USUARIO_TUTOR }}" \
+                -e CONTRASENA_TUTOR="${{ secrets.CONTRASENA_TUTOR }}" \
+                -e DNI_ADMIN="${{ secrets.DNI_ADMIN }}" \
+                -e DNI_AUXILIAR="${{ secrets.DNI_AUXILIAR }}"
+            fi
+          done
